--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "query-string": "^5.1.1",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
